K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commandsservice
  namespace: les-microservice
  labels:
    app: commandsservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandsservice
  template:
    metadata:
      labels:
        app: commandsservice
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "commandsservice"
        dapr.io/app-port: "5230"
        # dapr.io/config: "dapr-config"
    spec:
      containers:
        - name: commandsservice
          image: megapers/commandsservice:1.0
          ports:
            - containerPort: 5230
