K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformservice
  namespace: les-microservice
  labels:
    app: platformservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "platformservice"
        dapr.io/app-port: "5012"
        # dapr.io/config: "dapr-config"
    spec:
      containers:
        - name: platformservice
          image: megapers/platformservice:latest
          ports:
            - containerPort: 5012
