K8S/commands-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commands-svc
  namespace: les-microservice
spec:
  type: ClusterIP
  selector:
    app: commandsservice
  ports:
    - name: http
      port: 80
      targetPort: 5230
      protocol: TCP
    - name: dapr-http
      port: 3500
      targetPort: 3500
      protocol: TCP
    - name: dapr-grpc
      port: 50001
      targetPort: 50001
      protocol: TCP
