K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platforms-svc-nodeport
  namespace: les-microservice
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: http
      port: 80
      targetPort: 5012
      nodePort: 30080
      protocol: TCP
