K8S/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rabbitmq
    version: v1
  name: rabbitmq
  namespace: les-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5672

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
  namespace: les-microservice
spec:
  ports:
    - name: "data"
      port: 5672
      targetPort: 5672
  selector:
    app: rabbitmq
